[package]
name = "sectok"
version = "0.2.0"
authors = ["Jakub Stasiak <jakub@stasiak.at>"]
edition = "2018"
license = "MIT"
description = "A library to interact with RFC 8959 secret-token URIs"
repository = "https://github.com/jstasiak/sectok"
categories = ["encoding", "text-processing", "web-programming"]


[dependencies]
percent-encoding = "2.*"
regex = "1"
lazy_static = "1.4"
